4.6.008 (2009-05-07)
	- setSignature() method was improved (but is still experimental).

4.6.007 (2009-05-05)
	- Bug #2786685 "writeHtmlCell and <br /> in custom footer" was fixed.
	- Table header repeating bug was fixed.
	- Some newlines and tabs are now automatically removed from HTML strings.

4.6.006 (2009-04-28)
	- Support for "<a name="...">...</a>" was added.
	- By default TCPDF requires PCRE Unicode support turned on but now works also without it (with limited ability to detect some Unicode blank spaces).

4.6.005 (2009-04-25)
	- Points (pt) conversion in getHTMLUnitToUnits() was fixed.
	- Default tcpdf.pem certificate file was added.
	- Experimental support for signing document was added but it is not yet completed (some help is needed - I think that the calculation of the ByteRange is OK and the problem is on the signature calculation).

4.6.004 (2009-04-23)
	- Method deletePage() was added to delete pages (see example n. 44).

4.6.003 (2009-04-21)
	- The caching mechanism of the UTF8StringToArray() method was fixed.

4.6.002 (2009-04-20)
	- Documentation of rollbackTransaction() method was fixed.
	- The setImageScale() and getImageScale() methods now set and get the adjusting parameter used by pixelsToUnits() method.
	- HTML images now support other units of measure than pixels (getHTMLUnitToUnits() is now used instead of pixelsToUnits()).
	- WARNING: PDF_IMAGE_SCALE_RATIO has been changed by default to 1.

4.6.001 (2009-04-17)
	- Spaces between HTML block tags are now automatically removed.
	- The bug related to cMargin changes between tables was fixed.

4.6.000 (2009-04-16)
	- WARNING: THIS VERSION CHANGES THE BEHAVIOUR OF $x and $y parameters for several TCPDF methods:
		zero coordinates for $x and $y are now valid coordinates;
		set $x and $y as empty strings to get the current value.
	- Some error caused by 'empty' funtion were fixed.