@@ -1368,7 +1368,7 @@ $type)</code>
 
         <div class="credit">
 		    <hr />
-		    Documentation generated on Thu, 07 May 2009 15:07:57 +0200 by <a href="http://www.phpdoc.org">phpDocumentor 1.4.1</a>
+		    Documentation generated on Thu, 07 May 2009 15:13:04 +0200 by <a href="http://www.phpdoc.org">phpDocumentor 1.4.1</a>
 	      </div>
       </td></tr></table>
     </td>
