@@ -96,7 +96,7 @@ PHP class to creates array representations for common 1D barcodes to be used wit
 
         <div class="credit">
 		    <hr />
-		    Documentation generated on Thu, 07 May 2009 15:07:57 +0200 by <a href="http://www.phpdoc.org">phpDocumentor 1.4.1</a>
+		    Documentation generated on Thu, 07 May 2009 15:13:04 +0200 by <a href="http://www.phpdoc.org">phpDocumentor 1.4.1</a>
 	      </div>
       </td></tr></table>
     </td>
