@@ -88,7 +88,7 @@ Array of WEB safe colors.<br /><br /><br /><br />
 
         <div class="credit">
 		    <hr />
-		    Documentation generated on Thu, 07 May 2009 15:07:58 +0200 by <a href="http://www.phpdoc.org">phpDocumentor 1.4.1</a>
+		    Documentation generated on Thu, 07 May 2009 15:13:05 +0200 by <a href="http://www.phpdoc.org">phpDocumentor 1.4.1</a>
 	      </div>
       </td></tr></table>
     </td>
