@@ -237,7 +237,7 @@ Unicode Include file for TCPDF.<br /><br /><br /><br />
 
         <div class="credit">
 		    <hr />
-		    Documentation generated on Thu, 07 May 2009 15:08:03 +0200 by <a href="http://www.phpdoc.org">phpDocumentor 1.4.1</a>
+		    Documentation generated on Thu, 07 May 2009 15:13:10 +0200 by <a href="http://www.phpdoc.org">phpDocumentor 1.4.1</a>
 	      </div>
       </td></tr></table>
     </td>
